bin/testsuite/tests/compiler/src/errors/compiler2701.swg
//#global testerror "Err0118"

#[Swag.Macro]
func toto(stmt: #code void)
{
    #inject(stmt)
}

//#[Swag.PrintBc]
#test
{
    toto()
    {
        toto()
        {
        }
    }
}
